Fix overflow in dom. Fix hanging up and re-calling.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -174,6 +174,10 @@ body, html {
   height: 100%;
   display: inline-block;
 
+  .span12 {
+    overflow: hidden;
+  }
+
   #video {
     height: 100%;
 
